<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/teal_200">
    <item
        android:id="@+id/mi_about_us"
        android:title="@string/about_us" />

    <item
        android:id="@+id/mi_testimonial"
        android:title="Testimonials"/>

    <item
        android:id="@+id/mi_login"
        android:title="@string/login"/>
    <item
        android:id="@+id/mi_strategy_list"
        android:title="Strategy List"
        android:visible="false"/>
    <item
        android:id="@+id/mi_logout"
        android:title="@string/logout"
        android:visible="false"/>
    <item
        android:id="@+id/mi_logged_menu"
        android:title="Your Details"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/mi_my_profile"
                android:title="@string/my_profile"/>
            <item
                android:id="@+id/mi_feedback"
                android:title="@string/feedback"/>
            <item
                android:id="@+id/mi_change_password"
                android:title="@string/change_password"/>
        </menu>
    </item>
</menu>