<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutUsActivity">

    <TextView
        android:id="@+id/tv_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/about_us"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_who_we_are"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/who_we_are"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_us" />

    <TextView
        android:id="@+id/tv_who_we_are_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/who_we_are_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_who_we_are" />

    <TextView
        android:id="@+id/tv_what_we_do"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:text="@string/what_we_do"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_who_we_are_text"/>

    <TextView
        android:id="@+id/tv_what_we_do_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/what_we_do_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_what_we_do"
        />
</androidx.constraintlayout.widget.ConstraintLayout>